--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ Django==1.11.6
 StatusCode==1.0.0
 django-admin==1.0.13
 django-ip==1.0.2
+django-models-ext==1.0.5
 django-rlog==1.0.7
 django-shortuuidfield==0.1.3
 django-uniapi==1.0.0
-django-we==1.1.0
+django-we==1.1.2
 mock==2.0.0
 mysqlclient==1.3.12
 pysnippets==1.0.4
