--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ StatusCode==1.0.0
 django-admin==1.1.0
 django-ip==1.0.2
 django-models-ext==1.0.5
+django-response==1.0.0
 django-rlog==1.0.7
 django-shortuuidfield==0.1.3
-django-uniapi==1.0.0
+django-uniapi==1.0.1
 django-we==1.1.2
 mock==2.0.0
 mysqlclient==1.3.12
