--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Django==1.11.6
 StatusCode==1.0.0
-django-admin==1.1.0
+django-admin==1.1.1
 django-ip==1.0.2
 django-models-ext==1.0.5
+django-redis-connector==1.0.1
 django-response==1.0.0
 django-rlog==1.0.7
 django-shortuuidfield==0.1.3
