--- a/pushman/deploy.bak/pushman_supervisor.ini
+++ b/pushman/deploy.bak/pushman_supervisor.ini
@@ -4,7 +4,9 @@ autostart=true
 autorestart=true
 startretries=3
 exitcodes=0,1,2
-stopsignal=QUIT
+stopsignal=KILL
+stopasgroup=true
+killasgroup=true
 stdout_logfile=/var/log/supervisor_pushman_access.log
 stderr_logfile=/var/log/supervisor_pushman_error.log
 user=diors
